; ModuleID = '/home/carl/AnghaBench/jerryscript/jerry-ext/handler/extr_handler-register.c_jerryx_handler_register_global.c'
source_filename = "/home/carl/AnghaBench/jerryscript/jerry-ext/handler/extr_handler-register.c_jerryx_handler_register_global.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @jerryx_handler_register_global(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %9 = call i32 (...) @jerry_get_global_object()
  store i32 %9, i32* %5, align 4
  %10 = load i32*, i32** %3, align 8
  %11 = call i32 @jerry_create_string(i32* %10)
  store i32 %11, i32* %6, align 4
  %12 = load i32, i32* %4, align 4
  %13 = call i32 @jerry_create_external_function(i32 %12)
  store i32 %13, i32* %7, align 4
  %14 = load i32, i32* %5, align 4
  %15 = load i32, i32* %6, align 4
  %16 = load i32, i32* %7, align 4
  %17 = call i32 @jerry_set_property(i32 %14, i32 %15, i32 %16)
  store i32 %17, i32* %8, align 4
  %18 = load i32, i32* %7, align 4
  %19 = call i32 @jerry_release_value(i32 %18)
  %20 = load i32, i32* %6, align 4
  %21 = call i32 @jerry_release_value(i32 %20)
  %22 = load i32, i32* %5, align 4
  %23 = call i32 @jerry_release_value(i32 %22)
  %24 = load i32, i32* %8, align 4
  ret i32 %24
}

declare dso_local i32 @jerry_get_global_object(...) #1

declare dso_local i32 @jerry_create_string(i32*) #1

declare dso_local i32 @jerry_create_external_function(i32) #1

declare dso_local i32 @jerry_set_property(i32, i32, i32) #1

declare dso_local i32 @jerry_release_value(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
